[package]
name = "eframe_simple"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.10.1"
dotenv = "0.15.0"
eframe = {version="0.32.3",features=["persistence"]}
egui_extras = {version="0.32.3", features=["all_loaders"]}
image = "0.25.8"
reqwest = {version="0.12.23", features=["json"]}
serde = { version="1.0.226", features=["derive"]}
serde_json = "1.0.145"
tokio = {version="1.47.1", features=["rt-multi-thread", "macros", "process"]}
